# kiren

./: .gitignore  CHANGELOG.md  CHANGELOG_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  DOCKER_HUB_SETUP.md  Dockerfile  Dockerfile.fast  Dockerfile.multi  LICENSE  Makefile  PRODUCTION_EXAMPLE.md  README-DOCKER.md  README.md  RELEASE_NOTES.md  benchmark.txt  build-wasm.sh  build.zig  cat  cleanup.sh  debug-http.js  deploy.sh  docker-compose.yml  install.sh  k8s-deployment.yml  kiren.toml  nginx.conf  publish-docker.sh  static-import-test.txt  test-events.js  test-module-resolution.js  test-server.js  test-streams.js  test.js  test_combined.js  test_express.js  test_logging.js  test_npm.js  test_packages.js  test_require.js  (+3 more)
.github/workflows/: ci.yml  docker-hub.yml  docker-publish.yml  docker.yml  release.yml
benchmark/: bench.js  bun-server.js  heavy.js  kiren-server.js
benchmarks/: fibonacci-test.js  loop-test.js  run-benchmarks.sh  startup-test.js
docker/: Dockerfile.alpine
docs/: API.md  BUILDING.md  DISTRIBUTION.md  PACKAGE_MANAGEMENT.md  README.md  getting-started.md  performance.md  repl.md
docs/api/: console.md  fetch.md  http.md  timers.md
examples/: README.md  async.js  clean-static-import.mjs  comprehensive-import-demo.mjs  debug-server.js  error-test.js  fetch.js  filesystem.js  fs-test.js  hello.js  http-server.js  json-api-test.js  middleware-demo.js  mixed-usage-demo.js  modular-file-operations.js  modular-http-server.js  path-test.js  performance-benchmark.js  port-test.js  process-test.js  process.js  production-demo.js  promise.js  real-static-import.mjs  server.js  showcase.js  simple-import-test.js  simple-server-test.js  simple-server.js  simple-test.js  simple-watch-test.js  simple.js  static-import-test.js  test.js  timers.js  todo-api-simple.js  todo-api.js  url-import-test.js  watch-test.js
examples/buffer/: test.js
examples/edge/: api.js  worker.js
examples/edge-runtime/: README.md  kiren.edge.json
examples/edge-runtime/workers/: api.js
examples/gurubu/: server.js
examples/modules/: config.json  greet.js  info.js  main.js  math.js
examples/static/: server.js
examples/url/: test.js
homebrew/: kiren.rb
lib/: axios.js  dotenv.js  express.js  express.js.bak  jsonwebtoken.js  kiren-express.js  simple-express.js  test-module.js  uuid.js
scripts/: build.sh  release.sh  test-install.sh
src/: bundler.zig  engine.zig  event_loop.zig  job_queue.zig  lib.rs  main.rs  main.zig  typescript.rs  typescript_wasm.rs  wasm_lib.rs
src/api/: buffer.rs  buffer.zig  console.rs  console.zig  crypto.rs  crypto.zig  encoding.zig  environment.rs  errors.rs  events.rs  express.rs  fetch.rs  fetch.zig  filesystem.rs  filesystem_improved.rs  fs.zig  http.rs  http.zig  mod.rs  module.zig  npm.rs  npm_simple.rs  path.zig  process.rs  process.zig  process_improved.rs  request_response.rs  sqlite.zig  static_files.rs  streams.rs  test.rs  timers.rs  url.zig  websocket.zig
src/config/: mod.rs
src/config/tests/: environment.rs  loading.rs  mod.rs  version.rs
src/edge/: config.zig  router.zig  runtime.zig  transform.zig
src/io/: poller.zig
src/modules/: cache.rs  commonjs.rs  commonjs_improved.rs  commonjs_simple.rs  es_modules.rs  es_modules_simple.rs  mod.rs  resolver.rs
src/package/: cache.rs  config.rs  manager.rs  mod.rs  registry.rs  resolver.rs  url_resolver.rs
src/package/config/tests/: mod.rs  project.rs  publish.rs  serialization.rs  validation.rs
src/runtime/: context.rs  engine.rs  isolate.rs  mod.rs  wasm_engine.rs
src/typescript/tests/: basic.rs  features.rs  mod.rs  modules.rs  nestjs.rs
test_static/public/: index.html
tests/: README.md  simple-test.js  test-dynamic-import.js  test-final-complete.js  test-import-advanced.js  test-kps.js  test-middleware.js  test-simple.js  test-suite-complete.js  test-timer-simple.js  test-timers.js
tests/api/: encoding.test.js
tests/examples/: simple_http_test.js  test-file.txt  test_full_packages.js
tests/http/: body.test.js  express.test.js  simple.test.js
tests/integration/: test-gurubu-compatibility.js  test-http-simple.js  test-http.js  test-runner.js  test-static-files.js  test-todo-api.sh  test-url-imports.js  test_http_server.js  test_import.js  test_module.js
tests/performance/: perf_test.js
tests/typescript/: README.md  basic_features.ts  basit.ts  comprehensive_test.ts  generics_test.ts  simple_test.ts
tests/unit/: test-buffer.js  test-comprehensive.js  test-final.js  test-new-features.js  test-process-cwd.js  test-process.js  test-timers.js  test_error.js  test_timer.js  test_timer_full.js
