[package]
name = "kiren"
version = "2.1.2"
edition = "2021"
authors = ["Mert Can Altin <mertcanaltin@example.com>"]
description = "A high-performance JavaScript runtime built with Rust - Zero config, single binary, production ready"
license = "MIT"
repository = "https://github.com/kirencore/kiren"
homepage = "https://github.com/kirencore/kiren"
documentation = "https://github.com/kirencore/kiren/tree/main/docs"
readme = "README.md"
keywords = ["javascript", "runtime", "v8", "server", "typescript"]
categories = ["development-tools", "web-programming"]
exclude = [
    "benchmarks/",
    "examples/",
    "docs/",
    ".github/",
    "target/",
    "*.log"
]

[[bin]]
name = "kiren"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
v8 = "0.84"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.0"
dashmap = "5.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
regex = "1.0"
crossbeam-channel = "0.5"
notify = "6.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
rand = "0.8"
urlencoding = "2.1"
ada-url = "2.0"
base64 = "0.21"
hex = "0.4"
lazy_static = "1.4"
sha2 = "0.10"
md5 = "0.7"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true